# UHC-BOT

./: ExtraScenarioInfo.txt  NoPingList.txt  README.md  ScenarioInfo.txt  ScramDictionary.txt  Scramble.txt  main.py  pyproject.toml
UHC BOT/: NoPostList.txt  RoleConversion.txt
